--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Camera_Test</string>
+    <string name="app_name">Dual Camera</string>
     <string name="record">RECORDING</string>
 </resources>
